Фіксація Python 3.11 для сумісності з aiohttp

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,8 +2,4 @@
 name = "puls"
 version = "0.1.0"
 description = "Puls Delivery Bot"
-requires-python = "==3.11.*"
-
-[build-system]
-requires = ["setuptools", "wheel"]
-build-backend = "setuptools.build_meta"
+requires-python = ">=3.11,<3.12"
