--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,6 @@ services:
   - type: web
     name: puls-bot
     runtime: python
-    pythonVersion: "3.11.8"  # чітко фіксуємо версію
+    pythonVersion: "3.11.8"
     buildCommand: pip install -r requirements.txt
-    startCommand: python main.py
+    startCommand: python bot.py
