--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,9 @@
 services:
   - type: web
-    name: puls-bot
+    name: your-bot
     runtime: python
     pythonVersion: "3.11.8"
-    buildCommand: pip install -r requirements.txt
+    buildCommand: |
+      pip install --upgrade pip
+      pip install --only-binary :all: -r requirements.txt
     startCommand: python bot.py
