--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-aiogram==3.0.0b7  # Нова бета-версія, яка підтримує сучасні aiohttp
-aiohttp>=3.9.0
+aiogram==3.0.0b7
+aiohttp~=3.8.4  # Специфічна версія, яку вимагає aiogram 3.0.0b7
 python-dotenv>=1.0.0
