Fix Python and aiohttp compatibility

--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,8 @@
 services:
   - type: web
-    name: puls-bot
+    name: telegram-bot
     runtime: python
     pythonVersion: "3.11.8"
     buildCommand: pip install -r requirements.txt
     startCommand: python bot.py
+    skipPoetryInstall: true  # Вимкнути автоматичну інсталяцію Poetry
